--- a/style.css
+++ b/style.css
@@ -1015,6 +1015,7 @@ button {
   border: none;
   box-shadow: none;
   background: transparent !important;
+  background-color: transparent !important;
   overflow: hidden;
   z-index: 1;
 }
